--- a/frontend/css/dropdown.css
+++ b/frontend/css/dropdown.css
@@ -40,7 +40,7 @@
 }
 
 .dropdown-content {
-  display: none;
+  display: block;
   position: absolute;
   background-color: #634242;
   min-width: 140px;
